got save mode to work

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
+safe: true
 exclude:
 - node_modules
-sass:
+scss:
   style: compressed
-  load_paths:
-  - mixins
-  - front-page
+  sass_dir: style-mixins
   exclude:
   - node_modules
