add blog page, add post template, example and styles

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,27 @@
+# Site information
+name: Ge Yang | episodeyang.com
+description: Ge's portfolio site
+url: http://www.episodeyang.com
+author: Ge Yang
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      permalink: /posts/:path
+      layout: "post"
+
+# collections
+collections:
+  posts:
+    output: true
+
+# blog configurations
+excerpt_separator: <!-- end excerpt -->
+
+# jekyll configurations
 safe: true
 incremental: true
 exclude:
@@ -6,3 +30,18 @@ scss:
   style: compressed
   exclude:
   - node_modules
+kramdown:
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
