--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "jekyll serve --watch",
-    "watch": "browser-sync start --browser safari --proxy localhost:4000 --files '_site/**/*.*'"
+    "watch": "browser-sync start --reload-delay 1000 --reload-debounce 1000 --browser safari --proxy localhost:4000 --files '_site/**/*.*'"
   },
   "repository": {
     "type": "git",
