--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "jekyll serve --watch",
+    "build-js": "NODE_ENV=production webpack --progress --profile --colors",
     "watch": "browser-sync start --reload-delay 1000 --reload-debounce 1000 --browser safari --proxy localhost:4000 --files '_site/**/*.*'"
   },
   "repository": {
@@ -27,6 +28,15 @@
   },
   "homepage": "https://github.com/episodeyang/episodeyang.github.io#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.11.1"
+  },
+  "dependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "lodash.throttle": "^4.0.1",
+    "webpack": "^1.13.0"
   }
 }
