--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   },
   "homepage": "https://github.com/episodeyang/episodeyang.github.io#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.11.1"
   },
   "dependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "lodash.throttle": "^4.0.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.11.1"
   }
 }
