--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "jekyll serve --watch",
-    "build-js": "NODE_ENV=production webpack --progress --profile --colors",
+    "build-js": "NODE_ENV=production webpack --profile --colors",
     "watch": "browser-sync start --reload-delay 1000 --reload-debounce 1000 --browser safari --proxy localhost:4000 --files '_site/**/*.*'"
   },
   "repository": {
